# docs/swagger.json
@@ -517,12 +517,19 @@
                 "tags": [
                     "Form"
                 ],
-                "summary": "Get Form",
+                "summary": "Get Form by assignmenttypeid and estatetypeid",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Item ID",
-                        "name": "id",
+                        "description": "Item assignment_type_id",
+                        "name": "assignment_type_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Item estate_type_id",
+                        "name": "estate_type_id",
                         "in": "path",
                         "required": true
                     }
@@ -861,6 +868,45 @@
                     }
                 }
             }
+        },
+        "/verify": {
+            "get": {
+                "description": "Signin",
+                "tags": [
+                    "User"
+                ],
+                "summary": "Verify User",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Item mobile",
+                        "name": "mobile",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Item verify_code",
+                        "name": "verify_code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -934,9 +980,7 @@
                 "type": {
                     "type": "integer"
                 },
-                "value": {
-                    "$ref": "#/definitions/models.Valuetype"
-                }
+                "value": {}
             }
         },
         "models.Form": {
@@ -1029,9 +1073,6 @@
                     "type": "integer"
                 }
             }
-        },
-        "models.Valuetype": {
-            "type": "object"
         }
     },
     "securityDefinitions": {
